fixed some spacing issues on landing pages

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -74,8 +74,12 @@ li {
     display: none;
   }
 
+  &--expanded {
+    display: block;
+  }
+
   &-header {
-    margin: $base-spacing 0;
+    margin: $large-spacing 0;
     display: flex;
     align-items: center;
 
